added html and styling

--- a/index.html
+++ b/index.html
@@ -3,7 +3,71 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,400;1,100;1,200;1,400&family=Barlow:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/media.css" rel="stylesheet" />
+    <title>Portfolio | Taran Johannessen</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Portfolio 2023 - Taran Johannessen</h1>
+      <hr />
+    </header>
+    <main>
+      <div class="card">
+        <a href="https://bucolic-jelly-8edd25.netlify.app/"><img src="/images/gamehub.jpg" alt="GameHub website" /></a>
+        <div class="description">
+          <h2>GameHub</h2>
+          <p>
+            GameHub is an online shop where users can purchase computer games. This gaming marketplace lets you buy tons of video games online for any
+            device.
+          </p>
+          <div class="links">
+            <a href="https://github.com/TaranJ/html-css-course-assignment/tree/cms">GitHub repository</a>
+            <a href="https://bucolic-jelly-8edd25.netlify.app/">Go to site</a>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <a href="https://communityscience-museum.netlify.app/"
+          ><img src="/images/communityScienceMuseum.jpg" alt="Community Science Museum website"
+        /></a>
+        <div class="description">
+          <h2>Community Science Museum</h2>
+          <p>
+            The Community Science Museum aims to create a space where everyone can experience the wonders of our discoveries and perhaps even ignite a
+            lifelong passion to continue the exploration of the world around us.
+          </p>
+          <div class="links">
+            <a href="https://github.com/TaranJ/community-science-museum" class="github">GitHub repository</a>
+            <a href="https://communityscience-museum.netlify.app/">Go to site</a>
+          </div>
+        </div>
+      </div>
+      <div class="card card-3">
+        <a href="https://jovial-kangaroo-2f0a7f.netlify.app/"><img src="/images/chapterandVerse.jpg" alt="Chapter and Verse website" /></a>
+        <div class="description">
+          <h2>Chapter and Verse</h2>
+          <p>
+            Chapter and Verse is a community of avid readers bonded by our insatiable thirst for great stories. Join us and read insightful, honest,
+            and thought-provoking book reviews!
+          </p>
+          <div class="links">
+            <a href="https://github.com/Noroff-FEU-Assignments/project-exam-1-TaranJoh/tree/main" class="github">GitHub repository</a>
+            <a href="https://jovial-kangaroo-2f0a7f.netlify.app/">Go to site</a>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
