--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
         /></a>
         <div class="description">
           <h2>Community Science Museum</h2>
-          <p>
-            The Community Science Museum aims to create a space where everyone can experience the wonders of our discoveries and perhaps even ignite a
-            lifelong passion to continue the exploration of the world around us.
-          </p>
+          <p>The Community Science Museum is an interactive museum for families as well as primary and middle school children.</p>
           <div class="links">
             <a href="https://github.com/TaranJ/community-science-museum" class="github">GitHub repository</a>
             <a href="https://communityscience-museum.netlify.app/">Go to site</a>
@@ -59,8 +56,7 @@
         <div class="description">
           <h2>Chapter and Verse</h2>
           <p>
-            Chapter and Verse is a community of avid readers bonded by our insatiable thirst for great stories. Join us and read insightful, honest,
-            and thought-provoking book reviews!
+            Chapter and Verse is a blog containing book reviews and recommendations, targeted at avid readers bonded by a thirst for great stories.
           </p>
           <div class="links">
             <a href="https://github.com/Noroff-FEU-Assignments/project-exam-1-TaranJoh/tree/main" class="github">GitHub repository</a>
